# crk

./: .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: code_coverage.yml  deserialization_tests.yml  tests_bigendian.yml  tests_linux.yml  tests_macos.yml  tests_windows.yml
CMake/: crkHelpers.cmake
crk/: CMakeLists.txt
crk/Generator/: CMakeLists.txt  crkSettings.toml
crk/Generator/Source/: main.cpp
